--- a/css/style.css
+++ b/css/style.css
@@ -1,286 +1,303 @@
 body{
 	margin: 0 auto;
-	padding: 0 auto;
 	font-family: 'Open Sans', sans-serif;
 	box-sizing: border-box;
     overflow-x:hidden;
 }
 
+a{
+	text-decoration: none;
+	color: #525252;
+}
+
+.wrapper{
+	margin: 0 auto;
+	padding: 0 auto;
  /* ---------header--------*/
+}
 header{
+	display: block;
 	width: 100%;
+	height: 70px;
 	position: fixed;
     top: 0;
-
-}
-
-#container-menu{
-	display: flex;
-	align-items: flex-end;
-    padding: 10px 170px 20px 170px;
-    color: #fff;
     box-shadow: 0 4px 8px rgba(99, 99, 99, 0.5);
     background-color: rgba(255, 255, 255, 1); 
-    height: 40px;
-	}
+}
 
-.wrap{
-	display: flex;
-	width: 1000px;
+.container-menu{
+	max-width: 1000px;
+    color: #525252;
     margin: 0 auto;
-}
+    line-height: 70px;
+	}
 	
-.lending{
+.lending p{
+	float: left;
+	max-width: 200px;
+	height: 100%;
+	text-align: center;
 	text-transform: uppercase;
-	color: #525252;
-	flex-grow: 1;
 	font-size: 20px;
-	align-self: center;
+	margin: 0 auto;
 }
 
-.nav ul{
-   	display: flex; 
+nav{
+	float: right;
 }
 
-.nav li{
-	display: inline-flex;
-	margin-left: 60px;
-	color: #525252;
+ul{
+	padding: 0;
+	margin: 0 auto;
+	list-style-type: none;
+}
+
+.nav-btn{
+	display: inline-block;
+	margin-left: 100px;
 	font-size: 16px;
-	padding: 8px;
 }
 
+.btn1{
+	margin-left: 0px;
+}
 /* --------------main----------------*/
 
 
-#container-main{
-	background-color: #DFE4EE;
-	margin-top: 50px;
-	padding-top: 60px;
+main{
+    background-color: #DFE4EE;
+	margin-top: 70px;
+	padding: 50px 170px;
 	text-align: center;
-	max-width: 100%;
 }
 
-.into h1{
-	text-transform: uppercase;
+.title{
 	font-family: "Playfair Display";
-	font-size: 48px;
-	font-weight: 700;
+	text-transform: uppercase;
 	color: #525252;
-	letter-spacing: 0.93px;
-}
-
-.into p{
-    max-width: 820px;
-    margin: 0 auto;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 50px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 34px;
-    color: #525252;
-}
-
-.btm{
-	background-color: #0c2a68;
-	display: table;
+	font-size: 48px;
+	line-height: 64px;
 	margin: 0 auto;
-	padding: 20px 50px;
+	margin-bottom: 50px;
+}
+
+.sub-title{
+    max-width: 818px;
+    margin: 0 auto;
+    margin-bottom: 70px;
+    color: #525252;
+    font-size: 20px;
+    line-height: 34px; 
+}
+
+.button-learn{
+	background-color: #0c2a68;
+	display: block;
+	margin: 0 auto;
+	padding: 10px 50px;
 	border-radius: 4px;
 	color: #fff;
-    font-size: 16px;
+    font-size: 20px;
 	font-weight: 600;
+	border: none;
+	margin-bottom: 50px;
+	line-height: 34px;
+	cursor: pointer;
 }
 
-.img{
-	margin-top: 30px;
+.asset1{
+	max-width: 960px;
+	height: 455px;
 }
+
 
 .content{
-    background-color: #fff;
-    display: table;
-    margin: 0 auto;
+	display: block;
+	padding: 50px 40px;
     border-radius: 16px;
-    padding: 100px 60px;
+    background-color: #fff;
     color: #525252;
-    justify-content: space-between;
-
-
 }
 
-.block1 h1, .into2 h1{
+.title-content{
     font-size: 40px;
     font-family: "Playfair Display";
     text-transform: uppercase;
-    letter-spacing: 0.77px;
-    margin-bottom: 20px;
+    line-height: 53px;
+    margin: 0 auto;
+    margin-bottom: 30px;
 }
 
-.block1 p, .into2 p{
+.sub-content{
 	max-width: 700px;
-	padding: 5px;
 	font-size: 20px;
-	font-weight: 400;
 	line-height: 34px;
-	margin-bottom: 50px;
 	margin: 0 auto;
-}
-
-.asset2{
 	margin-bottom: 30px;
 }
 
-#blocks{
-	display: flex;
-	justify-content: space-between;
-}
-
-.block1-1, .block1-2, .block1-3{
-    max-width: 250px;
-    box-shadow: 0 4px 8px rgba(196, 196, 196, 0.5);
-    border-radius: 8px;
-    padding: 10px 30px;
-}
-
-.block1-1, .block1-2{
-	margin-right: 30px;
-}
-
-.block1-1 h1, .block1-2 h1, .block1-3 h1 {
-	text-transform: uppercase;
-	margin-top: 10px;
-	margin-bottom: 20px;
-	font-family: "Playfair Display";
-	font-size: 20px;
-}
-
-.block1-1 p, .block1-2 p, .block1-3 p {
-	font-size: 16px;
-	font-weight: 400;
-}
-
-.into2{
-	margin-top: 100px;
+.bottom{
 	margin-bottom: 40px;
 }
 
-.container-block2{
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 100px;
-	margin-top: 100px;
+.asset2{
+	width: 430px;
+	height: 450px;
+	margin-bottom: 30px;
 }
 
-.block2{
-	display: flex;
-	flex-direction: column;
-	max-width: 380px;
-	align-items: flex-start;
-	text-align: left;
-	padding: 90px 10px 10px 10px;
+
+.mini-block{
+	display: inline-block;
+    max-width: 250px;
+    height: 100%;
+    box-shadow: 0 4px 8px rgba(196, 196, 196, 0.5);
+    border-radius: 8px;
+    padding:20px;
+    margin-bottom: 50px;
+    margin-right: 10px;
 }
 
-.image{
-	display: flex;
+.mini-three{
+	margin-right: 0px;
+}
+
+.img-one-mini-block{
+    width: 78px;
+    height: 90px;
+    margin-bottom: 20px;
+}
+
+.img-two-mini-block{
+    width: 120px;
+    height: 90px;
+    margin-bottom: 20px;
+}
+
+.img-three-mini-block{
+    width: 138px;
+    height: 90px;
+    margin-bottom: 20px;
+}
+
+.mini-block-title{
+	text-transform: uppercase;
+	font-family: "Playfair Display";
+	font-size: 20px;
+	line-height: 27px;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.mini-block-subtitle {
+	font-size: 16px;
+	font-weight: 400;
+	margin: 0 auto;
+	width: 230px;
+}
+
+.container-img-right{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.image-right{
+	float: right;
+	width: 500px;
+	height: 500px;
+}
+
+.image-left{
+    float: left;
+	width: 500px;
+	height: 500px;
 }
 
 .name{
-	text-transform: uppercase;
-	margin-bottom: 30px;
-	color: #525252;
 	font-family: "Playfair Display";
+	text-transform: uppercase;
+	color: #525252;
 	font-size: 24px;
-	letter-spacing: 0.77px;	
+	text-align: left;
+	line-height: 35px;	
+	margin: 0 auto;
+	margin-bottom: 10px;
 }
 
 .about{
 	font-size: 20px;
-	letter-spacing: 0.25px;
     font-weight: 400;
+    text-align: left;
+    line-height: 34px;
+    margin: 0 auto;
+    height: 500px;
 }
-
-.container-block3{
-	display: flex;
-	justify-content: space-between;
-}
-
-.block3{
-	text-align: left;
-	max-width: 380px;
-	padding: 90px 10px 10px 10px;
-}
-
-
-
-
 
 /*--------------- footer---------------*/
 
-#container-footer{
+.container-footer{
 	background-color: #DFE4EE															;
 	text-align: center;
 	margin: 0 auto;
-	padding: 100px;
 	color: #525252;
     max-width: 100%;
+    padding-bottom: 100px;
 
 }
 
-footer h1{
+.footer-title{
 	text-transform: uppercase;
     font-size: 40px;
     font-weight: 700;
-    letter-spacing: 0.77px;
+    line-height: 53px;
+    margin: 0 auto;
     margin-bottom: 30px;
 }
 
-footer p{
+.footer-sub{
 	max-width: 700px;
-	padding: 5px;
 	margin: 0 auto;
+	margin-bottom: 30px;
 	font-size: 20px;
 	font-weight: 400;
 	line-height: 34px;
 }
 
-input[type="email"]{
+.email{
 	display: block;
 	margin: 0 auto;
 	box-shadow: 0 4px 8px rgba(124, 124, 124, 0.5);
 	border-radius: 4px;
 	background-color: #ffffff;
 	max-width: 300px;
-	height: 40px;
-	margin-top: 30px;
-	margin-bottom: 40px; 
+	height: 40px; 
     border: none;
-    padding: 10px 20px;
     color: #0c2a68;
     font-weight: bolder;
     font-size: 18px;
+    margin-bottom: 40px;
+    padding-left: 10px;
 }
 
-input[type="submit"]{
-	background-color: #0c2a68;
-	display: table;
-	margin: 0 auto;
-	padding: 20px 50px;
-	border-radius: 10px;
-    font-size: 16px;						
-	font-weight: 600;							 
-	border: none;
-	color: #ffffff;							
-	font-size: 16px;
-	letter-spacing: 0.31px;																												
-	cursor: pointer;
+.submit-batton{
+    display: block;
+    margin: 0 auto;
+    max-width: 150px;
+    height: 40px;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    background-color: #0c2a68;
+    color: #fff;
+    cursor: pointer;
 }
 
-input[type="submit"]:hover{														
+.submit-batton:hover{														
 	opacity: 0.7;
 }
 
-input[type="email"]:focus{
+.email:focus{
     border: 2px solid #0c2a68;
 }
 
@@ -288,359 +305,281 @@ input[type="checkbox"]{
 	display: none;
 }
 
-.nav li:hover{
-    border: 2px solid #0c2a68;
-	color: #0c2a68;
-	padding: 6px;
-	border-radius: 4px;
+.nav-btn:hover{
+    font-weight: bolder;
 }
 
-.btm:hover{
+.button-learn:hover{
 	opacity: 0.7;
 }
 
-.btm a:link , .btm a:active, .btm a:visited{
-	color: #fff;
+@media screen and (max-width: 1300px){
+   .asset1{
+   	max-width: 700px;
+   	height: 330px;
+   }
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1230px){
 
-.nav li{
-	margin-left: 20px;
+main{
+	padding: 50px 80px;
 }
 
-#container-menu{
-    padding: 10px 40px 20px 40px;
-	}	
-
-.into h1{
-	font-size: 26px;
-	letter-spacing: 0.8px;
+.mini-block{
+    max-width: 250px;
 }
 
-.into p{
-    max-width: 500px;
-    font-size: 16px;
-    line-height: 28px;
-}	
-
-.asset10{
-	max-width: 600px;
-	height: 300px;
-}	
-	.content{				
-    padding: 70px 10px;
-    max-width: 700px;
+.mini-three{
+	margin-right: 0px;
 }
 
-.block1 h1, .into2 h1{
-    font-size: 28px;
-    letter-spacing: 0.5px;
+.img-one-mini-block{
+    width: 78px;
+    height: 90px;
 }
 
-.block1 p, .into2 p{
-	max-width: 500px;
-	padding: 5px;
+.img-two-mini-block{
+    width: 120px;
+    height: 90px;
+}
+
+.img-three-mini-block{
+    width: 138px;
+    height: 90px;
+}
+
+.mini-block-title{
+	text-transform: uppercase;
+	font-family: "Playfair Display";
+	font-size: 20px;
+	line-height: 27px;
+	margin: 0 auto;
+	margin-bottom: 10px;
+}
+
+.mini-block-subtitle {
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 28px;
+	margin: 0 auto;
+	width: 230px;
+}
 }
 
-.asset2{
-	max-width: 350px;
-    height: 320px;
+@media screen and (max-width: 1070px){
+    main{
+	padding: 50px 20px;
 }
 
-#blocks{
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
+
+.nav-btn{
+	margin-left: 50px;
 }
 
-.block1-1, .block1-2, .block1-3{
-    margin-bottom: 40px;
-    align-items: center;
+.sub-title{
+    max-width: 600px; 
 }
 
-.name{
-	font-size: 18px;
-	letter-spacing: 0.5px;	
+.mini-block{
+	display: block;
+    max-width: 280px;
+    margin-right: 0px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
-.about{
+.image-right{
+	width: 300px;
+	height: 300px;
+}
+
+.image-left{
+	width: 300px;
+	height: 300px;
+}
+
+}
+
+@media screen and (max-width: 730px){
+    .asset1{
+   	max-width: 550px;
+   	height: 330px;
+   }
+
+   .about{
 	font-size: 16px;
-	letter-spacing: 0.25px;
+    line-height: 28px;
+    height: 350px;
 }
-
-.image2{
-	max-width: 300px;
-	height: 350px;
-}
-
-footer h1{
-    font-size: 30px;
-    letter-spacing: 0.5px;
-}
-
-footer p{
-	font-size: 16px;
-}
-
-input[type="email"]{
-	height: 30px;
-    padding: 8px 16px;
-    font-size: 16px;
-}
-
-input[type="submit"]{
-	padding: 15px 35px;
-    font-size: 14px;						
-									 					
-}
-
 }
 
 @media screen and (max-width: 600px){
 
-.lending{
+	   main{
+	padding: 50px 0px;
+
+}
+	.lending p{
 	font-size: 14px;
+	margin-left: 10px;
 }
-.into h1{
+
+.title{
 	font-size: 24px;
-	letter-spacing: 0.5px;
+	line-height: 32px;
+	margin-bottom: 30px;
 }
 
-.into p{
+.sub-title{
+    margin-bottom: 50px;
     font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
+    line-height: 26px; 
 }
 
-.asset10{
-	max-width: 320px;
-	height: 150px;
+.asset1{
+   	max-width: 320px;
+   	height: 150px;
 }
 
-.block1 h1, .into2 h1{
+.content{
+	padding: 30px 0px;
+    border-radius: 0px;
+}
+
+.title-content{
     font-size: 20px;
-    letter-spacing: 0.5px;
+    line-height: 27px;
+    margin-bottom: 20px;
 }
 
-.block1 p, .into2 p{
-	max-width: 500px;
-	padding: 5px;
+.sub-content{
+	font-size: 16px;
+	line-height: 26px;
+	margin-bottom: 20px;
+}
+
+.asset2{
+   	max-width: 232px;
+   	height: 220px;
+}
+
+.container-img-right{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.image-right{
+	width: 320px;
+	height: 320px;
+	float: none;
+}
+
+.image-left{
+	width: 320px;
+	height: 320px;
+	float: none;
+}
+
+.name{
+	font-size: 20px;
+	text-align: center;
+	line-height: 27px;	
+}
+
+.about{
+	font-size: 16px;
+    text-align: center;
+    line-height: 26px;
+    height: 100%;
+    margin-bottom: 50px;
+}
+
+.container-footer{
+    padding-bottom: 50px;
+
+}
+
+.footer-title{
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.footer-sub{
 	font-size: 16px;
 	line-height: 26px;
 }
 
-.asset2{
-	max-width: 230px;
-	height: 220px;
+.nav-btn{
+	margin-left: 0px;
 }
 
-.content{
-	border-radius: 2px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.header {
+  position: relative;
 }
 
-
-.container-block2, .container-block3{
-	flex-direction: column;
+.nav {
+  width: 100%;
+  box-shadow: inset 0 5px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  display: none;
+}
+.nav-btn {
+  display: block;
+  height: 56px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 56px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #0c2a68;
+  transition: background-color 0.1s linear, color 0.1s linear;
+}
+.nav-btn:not(:first-of-type) {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.nav-btn:not(:last-of-type) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.nav-btn:last-of-type {
+  box-shadow: inset 0 -5px 10px -5px rgba(0, 0, 0, 0.4);
+}
+.nav-btn:hover {
+  background-color: #2768c1;
+}
+.nav-btn:active {
+  background-color: #2768c1;
+  color: #fff;
+}
+.nav-burger {
+  display: block;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  color: transparent;
+  font-size: 0;
+  background: url("../images/icon-menu.svg") no-repeat;
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  z-index: 1;
+}
+.nav-burger__checkbox {
+  display: none;
+}
+.nav-burger__checkbox:checked + .nav-burger {
+  background-image: url("../images/icon-cross.svg");
+}
+.nav-burger__checkbox:checked ~ .nav {
+  display: block;
 }
 
-.container-block2 img, .container-block3 img{
-    max-width:320px;
-    height: 320px; 
-}
-.container-block3 img{
-    order: 1;
-}
-
-.name, .about{
-	width: 300px;
-} 
-
-
-.into2{
-	margin-top: 50px;
-	margin-bottom: 20px;
-}
-
-.block2, .block3{
-	padding: 50px 10px 10px 10px;
-	text-align: center;	 
-}
-
-footer h1{
-    font-size: 24px;
-    letter-spacing: 0.5px;
-    margin-bottom: 20px;
-}
-
-footer p{
-	font-size: 16px;
-	line-height: 24px;
-	max-width: 400px;
-}
-
-
-
-#container-footer{
-	padding: 20px;
-}
-
-.menu{
-    width: 100%;
-    position: relative;
-    text-align: center;
-    height: 40px;
-}
-
-#check-menu{
-    display: none;
-}
-
-label{
+a{
 	color: #fff;
-	cursor: pointer;
-	display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    line-height: 40px;
-}
-
-.burger-line{
-    position: absolute;
-    top: 8px;
-    right: 10px;
-    width: 35px;
-    height: 5px;
-    background-color: #525252;
-    border-radius: 5px;
-    transition: .5s all;
-}
-
-.second, .third{
-    top: 18px;
-}
-
-.fourth{
-    top: 28px;
-}
-
-.nav{
-    display: block;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    transform: translateY(115%);
-    max-height: 0;
-    font-size: 0;
-    overflow: hidden;
-    transition: .5s all;
-    text-align: left;
-
-}
-
-.nav li{
-    display: block;
-    width: 100%;
-    padding: 10px;
-    color: #fff;
-    text-decoration: none;
-    border-top: 1px solid rgba(255,255,255,.3);
-    background-color: #0c2a68;
-}
-
-
-
-#check-menu:checked ~ .nav{
-    max-height: 500px;
-    font-size: 16px;
-}
-
-#check-menu:checked ~ .first{
-    display: none;
-}
-
-#check-menu:checked ~ .second{
-    transform: rotate(45deg);
-}
-
-#check-menu:checked ~ .third{
-    transform: rotate(-45deg);
-}
-
-#check-menu:checked ~ .fourth{
-    display: none;
-}
-}
-
-@media screen and (max-width: 320) {
-
-.lending{
-	font-size: 10px;
-}
-.into h1{
-	font-size: 20px;
-	letter-spacing: 0.4px;
-}
-
-.into p{
-    font-size: 12px;
-    line-height: 22px;
-}
-
-.block1 h1, .into2 h1{
-    font-size: 16px;
-    letter-spacing: 0.4px;
-}
-
-.block1 p, .into2 p{
-	max-width: 300px;
-	font-size: 12px;
-	line-height: 22px;
-}
-
-.asset2{
-	max-width: 200px;
-	height: 180px;
-}
-
-.container-block2 img, .container-block3 img{
-    max-width:240px;
-    height: 240px; 
-}
-
-.name, .about{
-	width: 240px;
-} 
-
-footer h1{
-    font-size: 20px;
-    letter-spacing: 0.4px;
-    margin-bottom: 16px;
-}
-
-footer p{
-	font-size: 12px;
-	line-height: 20px;
-	max-width: 300px;
-}
-
-
-
-#container-footer{
-	padding: 16px;
-}
-
 }
 }
